fix gap form

--- a/assets/src/scss/components/_contact.scss
+++ b/assets/src/scss/components/_contact.scss
@@ -78,7 +78,7 @@
         margin-bottom: 1rem;
 
         @include media-breakpoint-up(lg) {
-            padding-left: 10%;
+            padding-left: 10% !important;
             margin-bottom: 3rem;
         }
     }
